--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,10 +3,18 @@ on:
   workflow_dispatch:
     inputs:
       yuque_token:
-        description: 'Personal Access Token For Yuque'  
+        description: 'Personal Access Token For Yuque'
+      positionals:
+        description: 'Specify the knowledge base to export. For example: bufeidefeiyang/blog. If not specified, export all by default.'
 jobs:
   sync:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [16]
+        os: [ubuntu-latest]
 
     # steps:
     #   - name: Checkout
@@ -19,14 +27,38 @@ jobs:
     #       upstream_branch: master
     #       # pr_labels: <label1>,<label2>[,...] # optional, no default
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
+      # - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      # - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      # - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository
         uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # - name: Install yuque-exporter
+      #   run: npm i -g yuque-exporter@latest
+
+      - name: Fetch Yuque Article
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          YUQUE_TOKEN=${{ github.event.inputs.yuque_token }} npx yuque-exporter bufeidefeiyang
+      # - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      # - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      # - name: List files in the repository
+      #   run: |
+      #     ls ${{ github.workspace }}
+      # - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Add files to repository
+        run: |
+          git add .
+
+      - name: Commit changes
+        run: |
+          git commit -m "Add fetched files"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.5.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
