--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -54,6 +54,11 @@ jobs:
         run: |
           git add .
 
+      - name: Set Git identity
+        run: |
+          git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
+          git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
+
       - name: Commit changes
         run: |
           git commit -m "Add fetched files"
