--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Fetch Yuque Article
         run: |
           YUQUE_TOKEN=${{ github.event.inputs.yuque_token }} npx yuque-exporter bufeidefeiyang
+          echo "YUQUE_TOKEN=${{ github.event.inputs.yuque_token }} npx yuque-exporter bufeidefeiyang"
       # - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       # - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       # - name: List files in the repository
