--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,11 +1,10 @@
 name: Sync Yuque Article
 on:
-  workflow_dispatch:
-    inputs:
-      yuque_token:
-        description: 'Personal Access Token For Yuque'
-      positionals:
-        description: 'Specify the knowledge base to export. For example: bufeidefeiyang/blog. If not specified, export all by default.'
+  workflow_dispatch: {}
+env:
+  YUQUE_TOKEN: ''
+  REPOS: ''
+permissions: write-all
 jobs:
   sync:
     runs-on: ${{ matrix.os }}
@@ -16,20 +15,7 @@ jobs:
         node-version: [16]
         os: [ubuntu-latest]
 
-    # steps:
-    #   - name: Checkout
-    #     uses: actions/checkout@v3
-    #   - name: actions-template-sync
-    #     uses: AndreasAugustin/actions-template-sync@v0.4.2-draft
-    #     with:
-    #       github_token: ${{ secrets.GITHUB_TOKEN }}
-    #       source_repo_path: atian25/nodejs-template
-    #       upstream_branch: master
-    #       # pr_labels: <label1>,<label2>[,...] # optional, no default
     steps:
-      # - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      # - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      # - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository
         uses: actions/checkout@v3
 
@@ -38,19 +24,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # - name: Install yuque-exporter
-      #   run: npm i -g yuque-exporter@latest
-
       - name: Fetch Yuque Article
         run: |
-          YUQUE_TOKEN=${{ github.event.inputs.yuque_token }} npx yuque-exporter bufeidefeiyang
-          echo "YUQUE_TOKEN=${{ github.event.inputs.yuque_token }} npx yuque-exporter bufeidefeiyang"
-      # - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      # - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      # - name: List files in the repository
-      #   run: |
-      #     ls ${{ github.workspace }}
-      # - run: echo "🍏 This job's status is ${{ job.status }}."
+          YUQUE_TOKEN=$YUQUE_TOKEN npx yuque-exporter $REPOS
+
       - name: Add files to repository
         run: |
           git add .
@@ -61,10 +38,10 @@ jobs:
           git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
 
       - name: Commit changes
-        run: |
-          git commit -m "Add fetched files"
+        run: git commit -m "Update By Github Action"
 
       - name: Push changes
-        uses: ad-m/github-push-action@v0.5.0
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
