--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,8 +1,8 @@
 name: Sync Yuque Article
 
 on:
-  schedule:
-    - cron: '30 5 * * *'
+  # schedule:
+  #   - cron: '30 5 * * *'
   workflow_dispatch: {}
 
 permissions: write-all
